style.css
/* ... */
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 100;
	font-style: italic;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: bold;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: bold;
	font-style: italic;
}

@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 800;
	font-style: normal;
}
@font-face{
	font-family: "Raleway";
	src: url('./fonts/Raleway-MediumItalic.ttf') format('truetype');
	font-weight: 800;
	font-style: italic;
}

@font-face{
	font-family:"Dai Banna SIL";
	src: url('./fonts/dbsillo.ttf');
	font-style: italic;
}

body {
	margin: 0;
	overflow-y: hidden;
}

h1 {
	margin: 0;
	font-family:"Dai Banna SIL";
	font-style: italic;
	color: #7b6e4b;
	font-size: 3vw;
}

h2 {
	font-family:"Dai Banna SIL";
	font-style: italic;
	color: #7b6e4b;
}

h3 {
	color: #7b6e4b;
	font-size: 2vw;
	font-family: "Raleway";
}

img {
	max-width: 30%;
	/* margin-left: 10%; */
	margin-top: 5%;
}

p {
	font-family: "Raleway";
    color: #7b6e4b;
    font-weight: normal;
    margin: 0;
}

/* 
Loading screen 
*/
.lds-dual-ring {
  display: inline-block;
  width: 64px;
  height: 64px;
  position: absolute;
  z-index:20;
  background-color: white;
  top: 59px;
  left: 20px;

  position: absolute;
  top: 40vh;
  left: 43vw;
}

.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 46px;
  height: 46px;
  margin: 1px;
  border-radius: 50%;
  border: 5px solid #fff;
  border-color: var(--dark-Newcomb-green) transparent var(--dark-Newcomb-green) transparent;
  -webkit-animation: lds-dual-ring 1.2s linear infinite;
          animation: lds-dual-ring 1.2s linear infinite;
  color: var(--light-Newcomb-green);
}

.subtitle{
	text-align: center;
	font-weight: normal;
	font-style: normal;
}

@-webkit-keyframes lds-dual-ring {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

@keyframes lds-dual-ring {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}


/* end loading screen */

#loading_screen{
	width: 100vw;
	height: 100vh;
	background-color: white;
	
}

#horiz_container{
	display:-webkit-box;
	display: -webkit-flex;
	display:-ms-flexbox;
	display:flex;
	--webkit-flex-wrap: nowrap;
	-ms-flex-wrap: nowrap;
	    flex-wrap: nowrap;
	
	
	/* overflow-x: scroll; */
	overflow-x: scroll;
	overflow-y: hidden;
	z-index: 20;
	
	-webkit-overflow-scrolling: touch;

}

#first_section{
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	display: inline-block;
	background-image: url('./img/newcomb_bg.jpeg');
    background-size: cover;
	background-attachment: fixed;
	/* height: 100%; */
	width: 80%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
    /* justify-content: flex-end; */
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    z-index: 5;

    /* */
    overflow-x: hidden;
}

.first_section_mobile{
	background-attachment: scroll !important;

}

.height_hack{
	height: 100vh;
}

div#second_section{
	position: absolute;
	top:0;
	left:0;
}

#second_section{
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	display: inline-block;
	background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.0)), to(#dfd8c0)),url(./img/newcomb_bg.jpeg);
	background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	/* background-image: url('./img/newcomb_bg.jpeg'); */ 
	height: 100vh;
    /*(width: calc(100% - 15px); */
    background-size: cover;
    /* transform: rotateX(180deg); */
    background-attachment: fixed;
    z-index: -1;
    position: fixed;
    width: 100vw;
    overflow-y: hidden;

}

/* Add this to the fixed image to 
prevent accidentally trying to scroll on it ontouch */
.second_section_mobile{
	overflow-x: scroll;
	/* overflow-x: hidden;  */
	/* position: relative; */
	position: relative !important;
	background-attachment: scroll !important;

	display: flex;

}

#footer{
    margin-left: 10%;
}

.leader_logo{
	max-width: 100%;
	margin: 0;
	max-height: 40vh;
}

.brand_id{-ms-grid-row-align: center;align-self: center;margin-right: 2%;width: 50vw;transform: translate(25%,20%);}

.green_bar{
	height: 100vh;
	background-color: #129660;
	width: 75px;
	display: inline-block;
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	z-index: 2;
}

.green_bar_post{
	height: 100vh;
	width: 15px;
	background-color: #5eb246;
	display: inline-block;
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	z-index: 2;
}

.swipe_indicator{
    background-color: #60b03a;
    width:50px;
	height:200px;
	/* clip-path: polygon(50% 0%, 100% 50%, 50% 100%); */
	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	-webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	/* margin-top: calc(50vh - 100px); */
	margin-right: 20px;
	/*margin-left: calc(100% - 70px);*/
    -ms-flex-item-align: center;
        -ms-grid-row-align: center;
        align-self: center;
    margin-top: calc(50vh - 100px);
	-webkit-transform: translate(20vh,50vh);
	    -ms-transform: translate(20vh,50vh);
	        transform: translate(20vh,50vh);
}
/* ... */

